excel export can auto resizing . performance tuning